--- a/docs/references.bib
+++ b/docs/references.bib
@@ -8,3 +8,43 @@
 	collaborator = {{Lars Schöbitz}},
 	file = {Snapshot:C\:\\Users\\jos\\Zotero\\storage\\WAZ6A2ZA\\fslogisticskampala.html:text/html},
 }
+
+@article{van_de_giesen_transafrican_2014,
+	title = {The {Trans}‐{African} {Hydro}‐{Meteorological} {Observatory}},
+	volume = {1},
+	copyright = {http://onlinelibrary.wiley.com/termsAndConditions},
+	issn = {2049-1948, 2049-1948},
+	shorttitle = {The {Trans}‐{African} {Hydro}‐{Meteorological} {Observatory}},
+	url = {https://wires.onlinelibrary.wiley.com/doi/10.1002/wat2.1034},
+	doi = {10.1002/wat2.1034},
+	abstract = {In this opinion article, we present the Trans‐African Hydro‐Meteorological Observatory (
+              TAHMO
+              ). The goal of
+              TAHMO
+              is to develop a dense network of hydro‐meteorological measurement stations throughout sub‐Saharan Africa. On average, there will be one station per 1000 km
+              2
+              . The stations will be cost‐effective through the use of new sensor and communication technologies. The station design is robust and aims at minimizing maintenance. Special attention will be paid to data quality assessment and control. Through public–private partnerships, the system will be made financially self‐sustaining. Education will play an important role as many stations will be placed at schools, where they will play a role in the curriculum.
+              WIREs Water
+              2014, 1:341–348. doi: 10.1002/wat2.1034
+            
+            
+              This article is categorized under:
+              
+                
+                  Science of Water {\textgreater} Hydrological Processes
+                
+                
+                  Science of Water {\textgreater} Water and Environmental Change
+                
+                
+                  Human Water {\textgreater} Water Governance},
+	language = {en},
+	number = {4},
+	urldate = {2025-11-27},
+	journal = {WIREs Water},
+	author = {Van De Giesen, Nick and Hut, Rolf and Selker, John},
+	month = jul,
+	year = {2014},
+	pages = {341--348},
+	file = {Full Text PDF:C\:\\Users\\jos\\Zotero\\storage\\AEJEGYE4\\Van De Giesen et al. - 2014 - The Trans‐African Hydro‐Meteorological Observatory ( TAHMOs.pdf:application/pdf},
+}
