--- a/docs/references.bib
+++ b/docs/references.bib
@@ -1,11 +1,13 @@
 
-@misc{lars_schobitz_data_nodate,
-	title = {Data on faecal sludge transporting logistics in {Kampala}, {Uganda}},
+@misc{lars_schobitz_fslogisticskampala_2024,
+	title = {fslogisticskampala: {Data} on faecal sludge; transporting logistics in {Kampala}, {Uganda}},
 	url = {https://openwashdata.github.io/fslogisticskampala/},
 	abstract = {This package contains two data resources. `trips` contains the GPS locations of faecal sludge emptying trucks collecting sludge from pit latrines and septic tanks in Kampala, Uganda. Each trip is recorded with a unique identifier, the numberplate of the truck, the date and time of the record. Data was collected from 30th March 2015 until 25th June 2015. `trucks` has additional information on the volume of each truck.},
 	language = {en},
 	urldate = {2025-11-24},
 	collaborator = {{Lars Schöbitz}},
+	year = {2024},
+	note = {R package version 0.0.0.9000},
 	file = {Snapshot:C\:\\Users\\jos\\Zotero\\storage\\WAZ6A2ZA\\fslogisticskampala.html:text/html},
 }
 
@@ -47,4 +49,28 @@
 	year = {2014},
 	pages = {341--348},
 	file = {Full Text PDF:C\:\\Users\\jos\\Zotero\\storage\\AEJEGYE4\\Van De Giesen et al. - 2014 - The Trans‐African Hydro‐Meteorological Observatory ( TAHMOs.pdf:application/pdf},
+}
+
+@book{kimball_data_2013,
+	address = {Indianapolis, IN},
+	title = {The {Data} {Warehouse} {Toolkit}: {The} {Definitive} {Guide} to {Dimensional} {Modeling}},
+	isbn = {978-1-118-53080-1},
+	shorttitle = {The {Data} {Warehouse} {Toolkit}},
+	abstract = {Updated new edition of Ralph Kimball's groundbreaking book on dimensional modeling for data warehousing and business intelligence!The first edition of Ralph Kimball's The Data Warehouse Toolkit introduced the industry to dimensional modeling,and now his books are considered the most authoritative guides in this space. This new third edition is a complete library of updated dimensional modeling techniques, the most comprehensive collection ever. It covers new and enhanced star schema dimensional modeling patterns, adds two new chapters on ETL techniques, includes new and expanded business matrices for 12 case studies, and more.Authored by Ralph Kimball and Margy Ross, known worldwide as educators, consultants, and influential thought leaders in data warehousing and business intelligenceBegins with fundamental design recommendations and progresses through increasingly complex scenariosPresents unique modeling techniques for business applications such as inventory management, procurement, invoicing, accounting,customer relationship management, big data analytics, and moreDraws real-world case studies from a variety of industries,including retail sales, financial services, telecommunications,education, health care, insurance, e-commerce, and moreDesign dimensional databases that are easy to understand and provide fast query response with The Data Warehouse Toolkit: The Definitive Guide to Dimensional Modeling, 3rd Edition.},
+	language = {English},
+	publisher = {Wiley},
+	author = {Kimball, Ralph and Ross, Margy},
+	year = {2013},
+}
+
+@misc{lars_schobitz_fslogisticskampalalicensemd_2024,
+	title = {fslogisticskampala/{LICENSE}.md at main · openwashdata/fslogisticskampala},
+	url = {https://github.com/openwashdata/fslogisticskampala/blob/main/LICENSE.md},
+	abstract = {Data on faecal sludge transporting logistics in Kampala, Uganda - openwashdata/fslogisticskampala},
+	language = {en},
+	urldate = {2025-11-27},
+	journal = {GitHub},
+	author = {{Lars Schöbitz}},
+	year = {2024},
+	file = {Snapshot:C\:\\Users\\jos\\Zotero\\storage\\NSXEHXVR\\LICENSE.html:text/html},
 }
